--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,13 +64,37 @@ jobs:
           sudo apt update
           sudo apt install -y --no-install-recommends \
             clang llvm gcc-9 g++-9 gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi \
-            abootimg android-sdk-libsparse-utils bc binutils bison build-essential \
-            ccache cmake cpio curl device-tree-compiler flex gettext git jq kmod \
+            abootimg android-sdk-libsparse-utils bc binutils build-essential \
+            ccache cmake cpio curl device-tree-compiler gettext git jq kmod \
             libelf-dev libfdt-dev liblz4-tool libncurses5-dev libncursesw5-dev \
             libssl-dev libudev-dev libxml2-utils libzstd-dev lsb-release lz4 \
             lzop make nano ninja-build openssl patchutils pigz protobuf-compiler \
             python-is-python3 python3 python3-mako python3-pip python3-virtualenv \
             rsync unzip wget xz-utils zip zstd
+
+      - name: Install Bison 2.7 & Flex 2.5.35 (Manual Build)
+        run: |
+          mkdir -p tools && cd tools
+
+          # Install Bison 2.7
+          wget https://ftp.gnu.org/gnu/bison/bison-2.7.tar.gz
+          tar -xf bison-2.7.tar.gz && cd bison-2.7
+          ./configure --prefix=$HOME/.local && make -j$(nproc) && make install
+          cd ..
+
+          # Install Flex 2.5.35
+          wget https://github.com/westes/flex/releases/download/v2.5.35/flex-2.5.35.tar.gz
+          tar -xf flex-2.5.35.tar.gz && cd flex-2.5.35
+          ./configure --prefix=$HOME/.local && make -j$(nproc) && make install
+          cd ..
+
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+          echo "$HOME/.local/lib" >> $GITHUB_ENV
+          echo "$HOME/.local/lib64" >> $GITHUB_ENV
+          echo "LD_LIBRARY_PATH=$HOME/.local/lib:$HOME/.local/lib64" >> $GITHUB_ENV
+
+          # Optional: Fix Bison behavior
+          unset BISON_PKGDATADIR
 
       - name: Download Clang Android 15
         run: |
@@ -122,6 +146,11 @@ jobs:
           chmod +x scripts/config
           scripts/config --file out/.config --enable DEBUG_FS
           make O=out ARCH=arm64 SUBARCH=arm64 CC=clang AS=clang olddefconfig
+
+      - name: Check Bison & Flex Version
+        run: |
+          which bison && bison --version
+          which flex && flex --version
 
       - name: Compile Kernel
         run: |
