--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,29 +72,32 @@ jobs:
             python-is-python3 python3 python3-mako python3-pip python3-virtualenv \
             rsync unzip wget xz-utils zip zstd
 
-      - name: Install Bison 2.7 & Flex 2.5.35 (Manual Build)
+      - name: Install Bison 3.0.4 & Flex 2.5.35 (Manual Build)
         run: |
           mkdir -p tools && cd tools
 
-          # Install Bison 2.7
-          wget https://ftp.gnu.org/gnu/bison/bison-2.7.tar.gz
-          tar -xf bison-2.7.tar.gz && cd bison-2.7
-          ./configure --prefix=$HOME/.local && make -j$(nproc) && make install
+          echo ">>> Installing Bison 3.0.4..."
+          wget -q http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
+          tar -xf bison-3.0.4.tar.gz
+          cd bison-3.0.4
+          ./configure --prefix=$HOME/.local
+          make -j$(nproc)
+          make install
           cd ..
 
-          # Install Flex 2.5.35
-          wget https://github.com/westes/flex/releases/download/v2.5.35/flex-2.5.35.tar.gz
-          tar -xf flex-2.5.35.tar.gz && cd flex-2.5.35
-          ./configure --prefix=$HOME/.local && make -j$(nproc) && make install
+          echo ">>> Installing Flex 2.5.35..."
+          wget -q https://github.com/westes/flex/releases/download/v2.5.35/flex-2.5.35.tar.gz
+          tar -xf flex-2.5.35.tar.gz
+          cd flex-2.5.35
+          ./configure --prefix=$HOME/.local
+          make -j$(nproc)
+          make install
           cd ..
 
+          echo ">>> Exporting paths..."
           echo "$HOME/.local/bin" >> $GITHUB_PATH
-          echo "$HOME/.local/lib" >> $GITHUB_ENV
-          echo "$HOME/.local/lib64" >> $GITHUB_ENV
           echo "LD_LIBRARY_PATH=$HOME/.local/lib:$HOME/.local/lib64" >> $GITHUB_ENV
-
-          # Optional: Fix Bison behavior
-          unset BISON_PKGDATADIR
+          echo "BISON_PKGDATADIR=" >> $GITHUB_ENV
 
       - name: Download Clang Android 15
         run: |
