--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,9 @@ on:
 env:
   BUILD_USER: fannndi
   BUILD_HOST: github
-  HOSTCC: gcc-9
-  HOSTCXX: g++-9
-  CLANG_TRIPLE: aarch64-linux-gnu-
   ARCH: arm64
   SUBARCH: arm64
+  CLANG_TRIPLE: aarch64-linux-gnu-
 
 jobs:
   build:
@@ -63,124 +61,89 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y --no-install-recommends \
-            clang llvm gcc-9 g++-9 gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi \
-            abootimg android-sdk-libsparse-utils bc binutils build-essential \
-            ccache cmake cpio curl device-tree-compiler gettext git jq kmod \
-            libelf-dev libfdt-dev liblz4-tool libncurses5-dev libncursesw5-dev \
-            libssl-dev libudev-dev libxml2-utils libzstd-dev lsb-release lz4 \
-            lzop make nano ninja-build openssl patchutils pigz protobuf-compiler \
-            python-is-python3 python3 python3-mako python3-pip python3-virtualenv \
-            rsync unzip wget xz-utils zip zstd
+            gcc-9 g++-9 gcc-aarch64-linux-gnu gcc-arm-linux-gnueabi \
+            bc binutils build-essential cmake curl git \
+            kmod libelf-dev libssl-dev libncurses5-dev libncursesw5-dev \
+            lzop python-is-python3 rsync unzip xz-utils zip cpio \
+            lz4 device-tree-compiler libxml2-utils abootimg \
+            android-sdk-libsparse-utils make ninja-build zstd \
+            libzstd-dev libfdt-dev gettext libudev-dev
 
-      - name: Install Bison 3.0.4 & Flex 2.5.35 (Manual Build)
+      - name: Install Bison 3.0.5 & Flex 2.5.35
         run: |
           mkdir -p tools && cd tools
-
-          echo ">>> Installing Bison 3.0.4..."
-          wget -q http://ftp.gnu.org/gnu/bison/bison-3.0.4.tar.gz
-          tar -xf bison-3.0.4.tar.gz
-          cd bison-3.0.4
-          ./configure --prefix=$HOME/.local
-          make -j$(nproc)
-          make install
+          wget https://ftp.gnu.org/gnu/bison/bison-3.0.5.tar.gz
+          tar -xf bison-3.0.5.tar.gz && cd bison-3.0.5
+          ./configure --prefix=$HOME/.local && make -j$(nproc) && make install
           cd ..
-
-          echo ">>> Installing Flex 2.5.35..."
-          wget -q https://github.com/westes/flex/releases/download/v2.5.35/flex-2.5.35.tar.gz
-          tar -xf flex-2.5.35.tar.gz
-          cd flex-2.5.35
-          ./configure --prefix=$HOME/.local
-          make -j$(nproc)
-          make install
+          wget https://github.com/westes/flex/releases/download/v2.5.35/flex-2.5.35.tar.gz
+          tar -xf flex-2.5.35.tar.gz && cd flex-2.5.35
+          ./configure --prefix=$HOME/.local && make -j$(nproc) && make install
           cd ..
-
-          echo ">>> Exporting paths..."
           echo "$HOME/.local/bin" >> $GITHUB_PATH
           echo "LD_LIBRARY_PATH=$HOME/.local/lib:$HOME/.local/lib64" >> $GITHUB_ENV
-          echo "BISON_PKGDATADIR=" >> $GITHUB_ENV
+          unset BISON_PKGDATADIR
 
-      - name: Download Clang Android 15
+      - name: Download Clang r536225
         run: |
-          if [[ ! -f "clang/bin/clang" ]]; then
-            mkdir -p clang
-            wget -q https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/main/clang-r536225.tar.gz -O - | tar -xz -C clang
-          fi
+          mkdir -p clang
+          wget -q https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/main/clang-r536225.tar.gz -O - | tar -xz -C clang
           echo "$GITHUB_WORKSPACE/clang/bin" >> $GITHUB_PATH
           echo "TOOLCHAIN_PATH=$GITHUB_WORKSPACE/clang" >> $GITHUB_ENV
 
       - name: Show Clang Version
-        id: clang_version
-        run: echo "version=$(clang/bin/clang --version | head -n1)" >> $GITHUB_OUTPUT
+        run: clang/bin/clang --version
 
-      - name: Download GCC 9.3 Toolchain (aarch64)
+      - name: Download GCC 9.3 (aarch64)
         run: |
-          git clone --depth=1 https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-gnu-9.3 gcc9
-          echo "$GITHUB_WORKSPACE/gcc9/bin" >> $GITHUB_PATH
+          git clone --depth=1 https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-gnu-9.3 gcc64
+          echo "$GITHUB_WORKSPACE/gcc64/bin" >> $GITHUB_PATH
 
-      - name: Download GCC 4.9 Toolchain (arm-linux)
+      - name: Download GCC 4.9 (arm32)
         run: |
           git clone --depth=1 https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_arm-linux-androideabi-4.9 gcc32
           echo "$GITHUB_WORKSPACE/gcc32/bin" >> $GITHUB_PATH
 
-      - name: Clean Output Directory
+      - name: Clean Output
         run: rm -rf out dtb.img Image.gz-dtb AnyKernel3 *.zip log.txt || true
 
-      - name: Make Defconfig
+      - name: Generate Defconfig
         run: |
-          export PATH="$GITHUB_WORKSPACE/clang/bin:$GITHUB_WORKSPACE/gcc9/bin:$GITHUB_WORKSPACE/gcc32/bin:$PATH"
-          unset AS
           make O=out ARCH=arm64 SUBARCH=arm64 \
             CROSS_COMPILE=aarch64-linux-gnu- \
             CROSS_COMPILE_ARM32=arm-linux-androideabi- \
-            CC=clang AS=clang \
-            ${{ github.event.inputs.defconfig }}
-          make O=out ARCH=arm64 SUBARCH=arm64 CC=clang AS=clang olddefconfig
+            CC=clang ${{ github.event.inputs.defconfig }}
+          make O=out ARCH=arm64 SUBARCH=arm64 CC=clang olddefconfig
 
-      - name: Disable Debug Options
-        if: ${{ env.DISABLE_DEBUG == 'true' }}
+      - name: Apply Debug & Experimental Options
         run: |
           chmod +x scripts/config
-          scripts/config --file out/.config --disable DEBUG_INFO
-          make O=out ARCH=arm64 SUBARCH=arm64 CC=clang AS=clang olddefconfig
-
-      - name: Enable Experimental Options
-        if: ${{ env.ENABLE_EXPERIMENTAL == 'true' }}
-        run: |
-          chmod +x scripts/config
-          scripts/config --file out/.config --enable DEBUG_FS
-          make O=out ARCH=arm64 SUBARCH=arm64 CC=clang AS=clang olddefconfig
-
-      - name: Check Bison & Flex Version
-        run: |
-          which bison && bison --version
-          which flex && flex --version
+          if [[ "${{ env.DISABLE_DEBUG }}" == "true" ]]; then
+            scripts/config --file out/.config --disable DEBUG_INFO
+          fi
+          if [[ "${{ env.ENABLE_EXPERIMENTAL }}" == "true" ]]; then
+            scripts/config --file out/.config --enable DEBUG_FS
+          fi
+          make O=out ARCH=arm64 SUBARCH=arm64 CC=clang olddefconfig
 
       - name: Compile Kernel
         run: |
-          # Set PATH ke toolchain
-          export PATH="$GITHUB_WORKSPACE/clang/bin:$GITHUB_WORKSPACE/gcc9/bin:$GITHUB_WORKSPACE/gcc32/bin:$PATH"
-
-          # Export toolchain & metadata
+          export PATH="$GITHUB_WORKSPACE/clang/bin:$GITHUB_WORKSPACE/gcc64/bin:$GITHUB_WORKSPACE/gcc32/bin:$PATH"
           export CROSS_COMPILE=aarch64-linux-gnu-
           export CROSS_COMPILE_ARM32=arm-linux-androideabi-
-          export KBUILD_COMPILER_STRING="$($GITHUB_WORKSPACE/clang/bin/clang --version | head -n1)"
-          export KBUILD_BUILD_USER="${BUILD_USER}"
-          export KBUILD_BUILD_HOST="${BUILD_HOST}"
-          unset AS
+          export KBUILD_COMPILER_STRING="$(clang --version | head -n1)"
+          export KBUILD_BUILD_USER=$BUILD_USER
+          export KBUILD_BUILD_HOST=$BUILD_HOST
 
-          # CPU core & parallelism
           JOBS=$(nproc --ignore=1)
           export MAKEFLAGS="-j$JOBS -Oline"
 
-          # Logging
           echo "🔧 Using Clang: $KBUILD_COMPILER_STRING"
           echo "🧱 Starting Kernel Build at $(date)"
 
-          # Compile kernel
           nice -n10 make O=out \
             ARCH=arm64 SUBARCH=arm64 \
             CC=clang \
-            AS=clang \
             LD=ld.lld \
             AR=llvm-ar \
             NM=llvm-nm \
@@ -192,14 +155,12 @@ jobs:
             KBUILD_VERBOSE=2 V=1 \
             Image.gz-dtb 2>&1 | tee log.txt
 
-          echo "✅ Kernel Build Completed at $(date)"
-
       - name: Save Final .config Snapshot
         run: cp out/.config defconfig_snapshot.config
 
-      - name: Create Kernel Images
+      - name: Generate Kernel Image
         run: |
-          cat out/arch/arm64/boot/Image.gz out/arch/arm64/boot/dts/**/*.dtb > Image.gz-dtb
+          cat out/arch/arm64/boot/Image.gz out/arch/arm64/boot/dts/**/*.dtb > Image.gz-dtb || true
           find out/arch/arm64/boot/dts -name '*.dtb' | sort | xargs cat > dtb.img || true
 
       - name: Package with AnyKernel3
@@ -208,7 +169,7 @@ jobs:
           cp Image.gz-dtb dtb.img AnyKernel3/ 2>/dev/null || true
           cd AnyKernel3 && zip -r9 ../${{ env.ZIPNAME }} . -x '*.git*' README.md *placeholder
 
-      - name: Upload Artifacts
+      - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: build-${{ env.BUILD_ID }}
@@ -218,7 +179,7 @@ jobs:
             defconfig_snapshot.config
             ${{ env.ZIPNAME }}
 
-      - name: Show Final Info
+      - name: Final Build Info
         if: success()
         run: |
           echo "✅ Build Finished!"
@@ -228,4 +189,4 @@ jobs:
 
       - name: Disable Swap
         if: always()
-        run: sudo swapoff /swapfile
+        run: sudo swapoff /swapfileS
