--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,15 +69,15 @@ jobs:
             android-sdk-libsparse-utils make ninja-build zstd \
             libzstd-dev libfdt-dev gettext libudev-dev
 
-      - name: Install Bison 3.0.5 & Flex 2.5.35
+      - name: Install Bison 3.0.5 & Flex 2.6.4
         run: |
           mkdir -p tools && cd tools
           wget https://ftp.gnu.org/gnu/bison/bison-3.0.5.tar.gz
           tar -xf bison-3.0.5.tar.gz && cd bison-3.0.5
           ./configure --prefix=$HOME/.local && make -j$(nproc) && make install
           cd ..
-          wget https://github.com/westes/flex/releases/download/v2.5.35/flex-2.5.35.tar.gz
-          tar -xf flex-2.5.35.tar.gz && cd flex-2.5.35
+          wget https://github.com/westes/flex/releases/download/v2.6.4/flex-2.6.4.tar.gz
+          tar -xf flex-2.6.4.tar.gz && cd flex-2.6.4
           ./configure --prefix=$HOME/.local && make -j$(nproc) && make install
           cd ..
           echo "$HOME/.local/bin" >> $GITHUB_PATH
@@ -189,4 +189,4 @@ jobs:
 
       - name: Disable Swap
         if: always()
-        run: sudo swapoff /swapfileS
+        run: sudo swapoff /swapfile
